--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div>
       <label for="style-preset" class="block text-sm sm:text-base font-medium text-gray-300 mb-1">Style Preset:</label>
       <select id="style-preset" class="block w-full p-3 border rounded-md text-sm sm:text-base">
-        <option value="none">None (Default)</option>
+        <option value="none" selected>None (Default)</option>
         <option value="3d-model">3D Model</option>
         <option value="analog-film">Analog Film</option>
         <option value="anime">Anime</option>
@@ -55,7 +55,7 @@
         <option value="line-art">Line Art</option>
         <option value="low-poly">Low Poly</option>
         <option value="modeling-compound">Modeling Compound</option>
-        <option value="neon-punk" selected>Neon Punk</option>
+        <option value="neon-punk">Neon Punk</option>
         <option value="origami">Origami</option>
         <option value="photographic">Photographic</option>
         <option value="pixel-art">Pixel Art</option>
